--- a/stylesheet.css
+++ b/stylesheet.css
@@ -175,16 +175,6 @@ body {
 
 
 
-
-
-
-
-
-
-
-
-
-
 .about {
   display: grid;
   grid-template-columns: repeat(2, 1fr);
@@ -198,7 +188,7 @@ body {
   padding-bottom: 20%;
   max-width: 50 0px;
   height: auto;
-  width: 100%;
+  width: 60%;
   border-radius: 10px;
 }
 
@@ -222,13 +212,14 @@ body {
   color: aliceblue;
   font-size: 20px;
   line-height: 1.4;
-  margin-bottom: 4rem;
+  margin-bottom: 7rem;
 }
 
 #services {
   color: aliceblue;
   font-size: 20px;
   line-height: 0.9;
+  margin-top: 4rem;
   margin-bottom:4rem;
 }
 
@@ -920,3 +911,7 @@ margin-top: 70px;
     opacity: 1;
   }
 }
+
+
+
+
