--- a/stylesheet.css
+++ b/stylesheet.css
@@ -641,7 +641,7 @@ align-items: flex-start;
 .layer{
        width: 100%;
        height: 0;
-       background: linear-gradient(rgba(6, 223, 183, 0),#0ef);
+       background: gray;
        position: absolute;
        border-radius: 8px;
        left: 0;
@@ -658,14 +658,14 @@ align-items: flex-start;
 
 
 .layer h5{
-    color: #000000;
+    color: rgb(255, 255, 255);
     font-weight: 600;
     font-size: 20px;
     font-weight: 600;
     margin-bottom: 15px;
 }
 .layer p{
-    color: #000000;
+    color: rgb(255, 255, 255);
     font-size: 1rem;
     font-weight: 600;
     line-height: 1.8;
